make two menus: collapsible for phone & tablet, noncollapsible for desktop (fixes all previous z-index issues)

--- a/src/css/partials/navbar.scss
+++ b/src/css/partials/navbar.scss
@@ -1,95 +1,95 @@
+#collapsible {
+  transition: $tr-scope $tr-speed-slow $tr-ease-alt;
+  overflow: hidden;
+  z-index: $z-collapsible;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 0;
+  max-height: 0;
+  width: 100%;
+  background-color: $c-darkgray;
+
+  @include media(">=desktop") {
+    display: none;
+  }
+
+  &.expanded {
+    height: 100vh;
+    max-height: 100vh;
+    opacity: 1;
+    transition: $tr-scope $tr-speed $tr-ease-alt;
+  }
+}
+
+#noncollapsible {
+  position: relative;
+  float: right;
+  max-height: inherit;
+  width: 200px;
+  opacity: 1;
+
+  @include media("<=tablet") {
+    display: none;
+  }
+}
+
+
 .navbar {
   width: 100%;
   z-index: $z-navbar;
   padding: 0;
   margin: 0;
+}
 
-  @include media("print") {
-    width: 100%;
+.menu {
+  overflow: hidden;
+  list-style: none;
+  height: auto;
+  z-index: $z-menu;
+  padding: 0;
+  margin: 2.8rem 0 0 2rem;
+
+  @include media('<=tablet') {
+    margin: 2rem 0 0 2rem;
   }
 
-  #collapsible {
-    transition: $tr-scope $tr-speed-slow $tr-ease-alt;
-    overflow: hidden;
-    z-index: $z-collapsible;
-
-    position: fixed;
-    top: 0;
-    left: 0;
-    max-height: 0;
-    width: 100%;
-    opacity: 1;
-
-    @include media("<=tablet") {
-      background-color: $c-darkgray;
-    }
-
-    @include media(">=tablet") {
-      position: relative;
-      float: right;
-      max-height: inherit;
-      width: 200px;
-      opacity: 1
-    }
-
-    &.expanded {
-      height: 100vh;
-      max-height: 100vh;
-      opacity: 1;
-      transition: $tr-scope $tr-speed $tr-ease-alt;
-    }
-  }
-
-  .menu {
-    overflow: hidden;
-    list-style: none;
-    height: auto;
-    z-index: $z-menu;
+  li {
+    display: block;
     padding: 0;
-    margin: 2.8rem 0 0 2rem;
+    margin: 0 auto;
 
-    @include media('<=tablet') {
-	    margin: 2rem 0 0 2rem;
-	}
-	
-    li {
-      display: block;
-      padding: 0;
-      margin: 0 auto;
+    a {
+      font-size: 1rem;
+      display: inline-block;
+      text-decoration: none;
+      color: $c-darkgray;
+      transition: $tr-scope $tr-speed $tr-ease;
+      text-transform: uppercase;
+      padding: .2rem 0;
 
-      a {
-		font-size: 1rem;
-        display: inline-block;
-        text-decoration: none;
-        color: $c-darkgray;
+      @include media('<=tablet') {
+        margin: 0;
+        color: $c-green;
+        font-size: 1.8rem;
+        padding: .2rem 0;
+      }
+
+      &:hover {
+        color: $c-primary;
         transition: $tr-scope $tr-speed $tr-ease;
-        text-transform: uppercase;
-		padding: .2rem 0;
-
-		@include media('<=tablet') {
-          margin: 0;
-          color: $c-green;
-          font-size: 1.8rem;
-          padding: .2rem 0;
-        }
-        
-        &:hover {
-          color: $c-primary;
-          transition: $tr-scope $tr-speed $tr-ease;
-        }
-      }
-
-      &.spacer {
-        padding: 1rem 0;
-      }
-
-      &.small {
-        @include media('<=phone') {
-          font-size: 1rem;
-        }
       }
     }
 
+    &.spacer {
+      padding: 1rem 0;
+    }
+
+    &.small {
+      @include media('<=phone') {
+        font-size: 1rem;
+      }
+    }
   }
 }
 
@@ -104,16 +104,13 @@ body.has-hero {
 
 
 /* animated hamburger menu icon -> changes to X when menu open */
-
 .toggler {
   z-index: $z-toggler;
-  position: relative;
-  float: right;
-  top: 2.2rem;
-  right: 0;
+  position: absolute;
+  top: 2.5rem;
+  right: 2rem;
   border: none;
   outline: none;
-  border-radius: 50%;
   background: none;
   padding: 0;
   margin: 0 auto;
@@ -152,7 +149,7 @@ body.has-hero {
     transform: rotate(0deg);
     transition: $tr-scope $tr-speed-fast ease-out;
     background-color: $c-mediumgray;
-
+    box-shadow: 1px 1px 1px rgba($c-black, 0.5);
   }
 
   div:nth-child(1) {
